@@ -1,7 +1,5 @@
 [ts2python]
-BaseClassName = 'TypedDict'      # any base class, you like, e.g. pydantic.BaseClass
 RenderAnonymous = 'local'     # rendering of anonymous TypedDicts: "type", "function", "local", "toplevel"
-ClassDecorator = ''              # a decorator for classes, e.g. "@dataclass"
 UseEnum = True                   # PEP 435, Python 3.4
 UsePostponedEvaluation = False   # PEP 563, Python 3.7  (adds "from __future__ import annotations")
 UseLiteralType = False           # PEP 584, 586, Python 3.8
